--- a/docs/process_examples/master06-antenatal.adoc
+++ b/docs/process_examples/master06-antenatal.adoc
@@ -21,7 +21,7 @@ preconditions
     
 types
 
-    Risk_value ::= Ordinal
+    Risk_type ::= Ordinal
         map =
             -------------------
             [emergency]:    2,
@@ -67,11 +67,11 @@ input -- Tracked State
 
     |
     | Possible values:
-    |   |premature rupture|, 
-    |   |polyhydramnios|, |oligohydramnios|,
-    |   |severe polyhydramnios|, |severe oligohydramnios|
+    |   [premature rupture], 
+    |   [polyhydramnios], [oligohydramnios],
+    |   [severe polyhydramnios], [severe oligohydramnios]
     |
-    amniotic_fluid_state: Terminology_term <<amniotic_fluid_state>>
+    amniotic_fluid_state: Terminology_term «amniotic_fluid_state»
         currency = 24h
 
     uterine_fundal_height: Quantity
@@ -136,7 +136,7 @@ rules
     | Return the highest level risk of any of the
     | assessed risks
     |
-    effective_risk: Risk_value
+    effective_risk: Risk_type
         Result := Result.max ({fundal_height_related_risk, 
                     amniotic_fluid_risk,
                     vaginal_bleeding_related_risk,
@@ -151,7 +151,7 @@ rules
                 amniotic_fluid_risk != [low_risk] or 
                 vaginal_bleeding_related_risk != [low_risk]
 
-    anaemia_risk: Risk_value
+    anaemia_risk: Risk_type
         Result := case anaemia_type in
             ============================================
             [severe_anaemia_of_pregnancy]:  [emergency],
@@ -162,7 +162,7 @@ rules
             ============================================
         ;
     
-    fundal_height_related_risk: Risk_value
+    fundal_height_related_risk: Risk_type
         Result := case ultrasound_finding in
             =================================================
             [interuterine_growth_retardation],
@@ -173,7 +173,7 @@ rules
             =================================================
         ;
     
-    amniotic_fluid_risk: Risk_value
+    amniotic_fluid_risk: Risk_type
         Result := case amniotic_fluid_state in
             =========================================
             [premature_rupture],
@@ -187,7 +187,7 @@ rules
             =========================================
         ;
     
-    vaginal_bleeding_related_risk: Risk_value
+    vaginal_bleeding_related_risk: Risk_type
         Result := case vaginal_physical_exam_assessment in
             =================================================
             [ectopic_pregnancy],
@@ -200,7 +200,7 @@ rules
             =================================================
         ;
             
-    gestational_diabetes_risk: Risk_value
+    gestational_diabetes_risk: Risk_type
         Result := choice of
             =================================================
             bmi_range = [high] or
@@ -215,7 +215,7 @@ rules
             =================================================
         ;
             
-    hypertension_risk: Risk_value
+    hypertension_risk: Risk_type
         Result := choice of
             =================================================
             has_pre_eclampsia or 
