--- a/docs/process_examples/master20-common_DLMs.adoc
+++ b/docs/process_examples/master20-common_DLMs.adoc
@@ -187,6 +187,8 @@ rules -- Main
             =====================================================
         ;
         
+rules -- Output
+
     |
     | Body surface area
     |
@@ -294,6 +296,8 @@ rules -- Main
             =====================================================
         ;
         
+rules -- Output
+
     |
     | Body mass index
     |
